<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="about_app_text">A convenient way to flip a coin, even if you don\'t have one. Simply tap the question mark or shake and view the result. Tap or shake to spin the coin again.</string>
  <string name="about_fragment_title">About Coin Flip</string>
  <string name="about_menu_title">About</string>
  <string name="about_mint_text" translatable="false">Quarter-dollar and Presidential $1 Coin images from the United States Mint. €1 Coin images from the European Central Bank.</string>
  <string name="app_name">Coin Flip</string>
  <string name="changes">CHANGES</string>
  <string name="clear">Clear</string>
  <string name="coin_animation">Coin Animation</string>
  <string name="coin_crop_failed">That image could not be opened.</string>
  <string name="coin_crop_mirror">Mirror</string>
  <string name="coin_crop_reset">Reset</string>
  <string name="coin_crop_rotate">Rotate</string>
  <string name="coin_crop_title">Position the Image</string>
  <string name="copyright_text" translatable="false">Copyright &#169; 2026 &#8212; Richard Banasiak</string>
  <string name="diagnostics_fragment_title">Diagnostic Test</string>
  <string name="diagnostics_iterations_dialog">Number of Iterations</string>
  <string name="diagnostics_iterations_range">Maximum: %1$s</string>
  <string name="diagnostics_iterations_summary">iterations</string>
  <string name="diagnostics_menu_title">Diagnostics</string>
  <string name="donate">Donate to EFF.org</string>
  <string name="donate_text">If you like this app, please consider making a donation to the Electronic Frontier Foundation. &#10084;</string>
  <string name="empty" translatable="false" />
  <string name="force_high">High</string>
  <string name="force_low">Low</string>
  <string name="force_medium">Medium</string>
  <string name="heads">HEADS</string>
  <string name="instructions_tap">Tap to Flip Coin</string>
  <string name="instructions_tap_shake">Tap/Shake to Flip Coin</string>
  <string name="navigate_back">Back</string>
  <string name="rate_app">Rate App on Google Play</string>
  <string name="reset_stats">Reset Statistics</string>
  <string name="rng">Random number generation is a process by which, often by means of a pseudo-random number generator, a sequence of numbers is generated that cannot be reasonably predicted better than by random chance. This means that the particular outcome sequence will contain some patterns detectable in hindsight but impossible to foresee.</string>
  <string name="seconds">%1s seconds</string>
  <string name="settings_header_advanced_title">Advanced</string>
  <string name="settings_header_appearance_title">Appearance</string>
  <string name="settings_header_coin_title">Coin</string>
  <string name="settings_header_flip_title">Flip</string>
  <string name="settings_header_statistics_title">Statistics</string>
  <string name="settings_item_animation_summary">Render spinning coin</string>
  <string name="settings_item_animation_title">Animation</string>
  <string name="settings_item_coin_empty">No matching coins</string>
  <string name="settings_item_coin_favorite_add">Add %1$s to favorites</string>
  <string name="settings_item_coin_favorite_pinned">%1$s is always in favorites</string>
  <string name="settings_item_coin_favorite_remove">Remove %1$s from favorites</string>
  <string name="settings_item_coin_group_canada">Canada</string>
  <string name="settings_item_coin_group_euro">Euro</string>
  <string name="settings_item_coin_group_favorites">Favorites</string>
  <string name="settings_item_coin_group_other">Other</string>
  <string name="settings_item_coin_group_us">United States</string>
  <string name="settings_item_coin_title">Coin Type</string>
  <string name="settings_item_custom_coin_border">Border</string>
  <string name="settings_item_custom_coin_choose">Choose</string>
  <string name="settings_item_custom_coin_delete">Delete</string>
  <string name="settings_item_custom_coin_emoji_empty">No matching emoji</string>
  <string name="settings_item_custom_coin_emoji_picker_title">Choose an Emoji</string>
  <string name="settings_item_custom_coin_empty">Tap to create</string>
  <string name="settings_item_custom_coin_replace">Replace</string>
  <string name="settings_item_custom_coin_save_failed">That coin face could not be saved.</string>
  <string name="settings_item_custom_coin_selected">Coin created, currently selected</string>
  <string name="settings_item_custom_coin_unselected">Coin created, select it in %1$s</string>
  <string name="settings_item_custom_text_title">Custom Text</string>
  <string name="settings_item_dynamic_colors_summary">Use wallpaper colors (Android 12+)</string>
  <string name="settings_item_dynamic_colors_title">Dynamic Color Theme</string>
  <string name="settings_item_emoji_coin_deleted">Emoji coin deleted</string>
  <string name="settings_item_emoji_coin_title">Emoji Coin</string>
  <string name="settings_item_emoji_group_activities">Activities</string>
  <string name="settings_item_emoji_group_animals">Animals &amp; Nature</string>
  <string name="settings_item_emoji_group_faces">Smileys</string>
  <string name="settings_item_emoji_group_food">Food &amp; Drink</string>
  <string name="settings_item_emoji_group_gestures">Gestures</string>
  <string name="settings_item_emoji_group_objects">Objects</string>
  <string name="settings_item_emoji_group_symbols">Symbols</string>
  <string name="settings_item_emoji_group_travel">Travel &amp; Places</string>
  <string name="settings_item_force_summary">Force required to flip coin</string>
  <string name="settings_item_force_title">Shake Sensitivity</string>
  <string name="settings_item_photo_coin_deleted">Photo coin deleted</string>
  <string name="settings_item_photo_coin_title">Photo Coin</string>
  <string name="settings_item_quick_reset_summary">Show reset button below statistics</string>
  <string name="settings_item_quick_reset_title">Quick Stats Reset</string>
  <string name="settings_item_records_summary">Best streak &#8212; %1$s</string>
  <string name="settings_item_reset_stats_summary">Flips recorded: %1$s</string>
  <string name="settings_item_secure_random_summary">Use a cryptographically secure pseudorandom number generator (CSPRNG)</string>
  <string name="settings_item_secure_random_title">Random Number Generator</string>
  <string name="settings_item_shake_summary">Shake device to flip coin</string>
  <string name="settings_item_shake_title">Shake</string>
  <string name="settings_item_sound_summary">Play sound after coin flip</string>
  <string name="settings_item_sound_title">Sound</string>
  <string name="settings_item_stats_summary">Display running total</string>
  <string name="settings_item_stats_title">Statistics</string>
  <string name="settings_item_streak_summary">Show the current run of identical results</string>
  <string name="settings_item_streak_title">Streak</string>
  <string name="settings_item_text_summary">Display HEADS/TAILS</string>
  <string name="settings_item_text_title">Result Text</string>
  <string name="settings_item_vibrate_summary">Vibrate on coin flip</string>
  <string name="settings_item_vibrate_title">Vibrate</string>
  <string name="settings_menu_title">Settings</string>
  <string name="stats_reset_message">Statistics Have Been Reset</string>
  <string name="streak">STREAK</string>
  <string name="streak_content_description">%1$d in a row</string>
  <string name="streak_face">%1$s: %2$s</string>
  <string name="tails">TAILS</string>
  <string name="time">TIME</string>
  <string name="total">TOTAL</string>
  <string name="turbo_mode">Turbo Mode Activated &#127812;</string>
  <string name="undo">Undo</string>
  <string name="version">version %1$s (%2$d)</string>
  <string name="wikipedia">&#8212; Wikipedia</string>
</resources>
