<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:scrollbars="none"
  >

  <LinearLayout
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/spacing_large"
    android:paddingBottom="@dimen/spacing_large"
    android:paddingStart="@dimen/spacing_medium"
    android:paddingEnd="@dimen/spacing_medium"
    tools:context=".about.AboutFragment"
    >

    <TextView
      style="@style/MaterialAlertDialog.Material3.Title.Text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_medium"
      android:text="@string/about_fragment_title"
      />

    <TextView
      android:id="@+id/version"
      style="@style/MaterialAlertDialog.Material3.Body.Text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_medium"
      tools:text="version 2024.1"
      />

    <TextView
      style="@style/MaterialAlertDialog.Material3.Body.Text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/about_app_text"
      />

    <TextView
      style="@style/MaterialAlertDialog.Material3.Body.Text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_small"
      android:text="@string/about_mint_text"
      />

    <TextView
      android:id="@+id/copyright"
      style="@style/MaterialAlertDialog.Material3.Body.Text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_medium"
      android:layout_marginBottom="@dimen/spacing_medium"
      android:text="@string/copyright_text"
      />

    <TextView
      style="@style/MaterialAlertDialog.Material3.Body.Text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_large"
      android:text="@string/donate_text"
      />

    <Button
      android:id="@+id/donate_button"
      style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="@dimen/spacing_large"
      android:text="@string/donate"
      />

    <Button
      android:id="@+id/rate_button"
      style="@style/Widget.Material3.Button.IconButton.Filled"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/rate_app"
      />

  </LinearLayout>

</ScrollView>
