<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:scrollbars="none"
  >

  <androidx.constraintlayout.widget.ConstraintLayout
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/spacing_large"
    android:paddingBottom="@dimen/spacing_large"
    android:paddingStart="@dimen/spacing_medium"
    android:paddingEnd="@dimen/spacing_medium"
    tools:context=".diagnostics.DiagnosticsFragment"
    >

    <TextView
      android:id="@+id/header"
      style="@style/MaterialAlertDialog.Material3.Title.Text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/diagnostics_fragment_title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

    <!-- HEADS -->

    <TextView
      android:id="@+id/heads"
      style="@style/AppTheme.TextAppearance.Diagnostics.Label.Heads"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/heads"
      app:layout_constraintStart_toStartOf="@id/left_margin"
      app:layout_constraintTop_toBottomOf="@id/top_barrier"
      />

    <TextView
      android:id="@+id/heads_count"
      style="@style/AppTheme.TextAppearance.Diagnostics.Value.Heads"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/heads"
      app:layout_constraintStart_toEndOf="@id/label_barrier"
      app:layout_constraintTop_toTopOf="@+id/heads"
      tools:text="1,000"
      />

    <TextView
      android:id="@+id/heads_ratio"
      style="@style/AppTheme.TextAppearance.Diagnostics.Value.Heads"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBaseline_toBaselineOf="@id/heads_count"
      app:layout_constraintStart_toEndOf="@+id/count_barrier"
      tools:text="[10.00%]"
      />

    <!-- TAILS -->

    <TextView
      android:id="@+id/tails"
      style="@style/AppTheme.TextAppearance.Diagnostics.Label.Tails"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_small"
      android:text="@string/tails"
      app:layout_constraintStart_toStartOf="@id/left_margin"
      app:layout_constraintTop_toBottomOf="@+id/heads"
      />

    <TextView
      android:id="@+id/tails_count"
      style="@style/AppTheme.TextAppearance.Diagnostics.Value.Tails"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/tails"
      app:layout_constraintStart_toEndOf="@+id/label_barrier"
      app:layout_constraintTop_toTopOf="@+id/tails"
      tools:text="9,000"
      />

    <TextView
      android:id="@+id/tails_ratio"
      style="@style/AppTheme.TextAppearance.Diagnostics.Value.Tails"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_small"
      app:layout_constraintBaseline_toBaselineOf="@+id/tails_count"
      app:layout_constraintStart_toEndOf="@+id/count_barrier"
      tools:text="[90.00%]"
      />

    <!-- TOTAL -->

    <TextView
      android:id="@+id/total"
      style="@style/AppTheme.TextAppearance.Diagnostics.Label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_small"
      android:text="@string/total"
      app:layout_constraintStart_toStartOf="@id/left_margin"
      app:layout_constraintTop_toBottomOf="@+id/tails"
      />

    <TextView
      android:id="@+id/total_count"
      style="@style/AppTheme.TextAppearance.Diagnostics.Value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/total"
      app:layout_constraintStart_toEndOf="@+id/label_barrier"
      app:layout_constraintTop_toTopOf="@+id/total"
      tools:text="10,000"
      />

    <TextView
      android:id="@+id/total_ratio"
      style="@style/AppTheme.TextAppearance.Diagnostics.Value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBaseline_toBaselineOf="@+id/total_count"
      app:layout_constraintStart_toEndOf="@+id/count_barrier"
      tools:text="[100.00%]"
      />

    <!-- DURATION -->

    <TextView
      android:id="@+id/time"
      style="@style/AppTheme.TextAppearance.Diagnostics.Label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_medium"
      android:text="@string/time"
      app:layout_constraintStart_toStartOf="@id/left_margin"
      app:layout_constraintTop_toBottomOf="@+id/total"
      />

    <TextView
      android:id="@+id/elapsed_time"
      style="@style/AppTheme.TextAppearance.Diagnostics.Value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/time"
      app:layout_constraintStart_toEndOf="@+id/label_barrier"
      app:layout_constraintTop_toTopOf="@+id/time"
      tools:text="5.678 seconds"
      />

    <TextView
      android:id="@+id/information"
      style="@style/AppTheme.TextAppearance.Diagnostics.Information"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/rng"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
      />

    <TextView
      android:id="@+id/wikipedia"
      style="@style/AppTheme.TextAppearance.Diagnostics.Citation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/spacing_medium"
      android:text="@string/wikipedia"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/information"
      />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/left_margin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="24dp"
      />

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/top_barrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:barrierMargin="@dimen/spacing_large"
      app:constraint_referenced_ids="header"
      />

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/bottom_barrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:barrierMargin="@dimen/spacing_large"
      app:constraint_referenced_ids="time, elapsed_time"
      />

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/label_barrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="end"
      app:barrierMargin="@dimen/spacing_medium"
      app:constraint_referenced_ids="heads, tails, total, time"
      />

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/count_barrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="end"
      app:barrierMargin="@dimen/spacing_small"
      app:constraint_referenced_ids="heads_count, tails_count, total_count"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
